--- a/apps/mobile/android/app/src/main/AndroidManifest.xml
+++ b/apps/mobile/android/app/src/main/AndroidManifest.xml
@@ -51,12 +51,12 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="onekey-wallet"/>
-        <data android:scheme="id.yeetpay.app"/>
+        <data android:scheme="com.xo.app"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
       <provider
-          android:name="id.yeetpay.app.OnekeyFileProvider"
+          android:name="com.xo.app.OnekeyFileProvider"
           android:authorities="${applicationId}.onekeyfile"
           android:exported="false"
           android:grantUriPermissions="true">
