--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           versionCode: ${{ env.BUILD_NUMBER }}
           versionName: ${{ steps.dotenv.outputs.version }}
-          packageName: 'id.yeetpay.app'
+          packageName: 'com.xo.app'
           android_dir: ./apps/mobile
 
       - name: Write .env.version
