--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "scheme": "x0",
-    "name": "x0",
-    "slug": "x0",
+    "scheme": "Yeet",
+    "name": "Yeet",
+    "slug": "Yeet",
     "owner": "soultan",
     "version": "1.0.0",
     "orientation": "portrait",
